--- a/package.json
+++ b/package.json
@@ -8,13 +8,25 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^4.1.1",
+    "axios": "^0.27.2",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.15.1",
+    "react-toastify": "^9.0.7",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
+    "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.14",
+    "prisma": "^4.1.1",
+    "tailwindcss": "^3.1.7"
   }
 }
