--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:75988738@localhost:3306/quioscoapp"
+DATABASE_URL="mysql://root:rhL6tKQPpTBrORhPBdq0@containers-us-west-84.railway.app:5919/railway"
